# pleb-pruner

./: Cargo.toml  README.md  config.yaml
src/: main.rs
